syntax = "proto3";

option csharp_namespace = "IdentityService";

package identity;

service Identity {
    rpc Register (RegisterRequest) returns (RegisterResponse);
    rpc Login (LoginRequest) returns (LoginResponse);
}

message RegisterRequest {
    string email = 1;
    string username = 2;
    string password = 3;
}

message RegisterResponse {
    bool success = 1;
}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message LoginResponse {
    string token = 1;
}